<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:animateLayoutChanges="true">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/email"
    android:layout_marginLeft="50dp">
</TextView>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:hint="Enter e-mail..."
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp">
    </TextView>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:hint="Enter password.."
        android:inputType="textPassword" />
    <Button
        android:id="@+id/logInButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:text="Log in" />
    <TextView
        android:id="@+id/orText"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"
        android:text="@string/or" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:minWidth="400dp"
        android:progressDrawable="@drawable/barprog"/>



    <evased.drugorganizer.IndicatingView
        android:id="@+id/barView"
        android:layout_width="1000px"
        android:layout_height="50px"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp">

    </evased.drugorganizer.IndicatingView>

    <Button
        android:id="@+id/openRequestActivityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-150dp"
        android:text="@string/open_request_activity">

    </Button>

    <TextView
        android:id="@+id/countdowtextview"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-240dp">
    </TextView>




</LinearLayout>